@@ -1534,7 +1534,7 @@ public:
     }
     QModelIndex index(int row, int column, const QModelIndex &parent = QModelIndex()) const
     {
-        return hasIndex(row, column, parent) ? createIndex(row, column, 0) : QModelIndex();
+        return hasIndex(row, column, parent) ? createIndex(row, column) : QModelIndex();
     }
     int rowCount(const QModelIndex & /* parent */) const
     {
